kubernetes/apps/default/unsloth-studio/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: unsloth-studio
spec:
  hostnames:
    - unsloth.hades.casa
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: unsloth-studio
          port: 8000
